[build-system]
requires = [
    "setuptools", 
    "wheel", 
    "mypy[mypyc]==1.18.2",
    "types-pyyaml",
    "types-requests",
    "types-ujson",
    "eip712==0.2.14",
    # ckzg (installed with eth-account) is unable to build on Python3.10 for Windows
	# pydantic-core (installed with eth-account and faster-eth-utils, which is installed with eth-event) is unable
    # to build on Python3.14 on 32-bit Linux distros so we exclude it in that one specific case
    "eth-account==0.13.7; platform_system == 'MacOS' or (platform_system == 'Windows' and python_version != '3.10') or (platform_system == 'Linux' and python_version != '3.14')",
	"eth-event==1.4.5; platform_system != 'Linux' or python_version != '3.14' or platform_machine != 'i686'",
    "eth-keys==0.7.0",
    "eth-typing==5.2.1",
    "faster-eth-abi==5.2.12; platform_system != 'Linux' or python_version != '3.14' or platform_machine != 'i686'",
    "faster-eth-utils==5.3.16; platform_system != 'Linux' or python_version != '3.14' or platform_machine != 'i686'",
    "faster-hexbytes==1.3.3",
    "prompt-toolkit==3.0.52",
	"py-solc-ast==1.2.10",
	"py-solc-x==1.1.1",
	# There is failure to resolve "packaging" on MacOS and Windows
    "vvm==0.2.1; platform_system == 'Linux'",
    "vyper==0.4.3; platform_system == 'Linux'",
    "websockets==15.0.1",
]

# Brownie configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
  | venv
)/
'''
