[build-system]
requires = [
    "setuptools", 
    "wheel", 
    "packaging>=24.2,<25",
    "mypy[mypyc]==1.19.0",
    "types-pyyaml",
    "types-requests",
    "types-ujson",
    # ckzg (installed with eth-account and eip712) is unable to build on 64-bit Windows, and unable on 32-bit
	# Windows entirely. We simply exclude them for Windows installs as it is too difficult to differentiate 32-bit vs 64-bit here.
	# pydantic-core (installed with eth-account, eip712, and faster-eth-utils - which is installed with eth-event) is unable
    # to build on 32-bit Linux distros so we exclude it in that one specific case
    "eip712==0.3.3; platform_system == 'MacOS' or platform_system == 'Linux'",
    "eth-account==0.13.7; platform_system == 'MacOS' or platform_system == 'Linux'",
	"eth-event==1.4.7; platform_system != 'Linux' or platform_machine != 'i686'",
    "eth-keys==0.7.0",
    "eth-typing==5.2.1",
    "faster-eth-abi==5.2.27; platform_system != 'Linux' or platform_machine != 'i686'",
    "faster-eth-utils==5.3.26; platform_system != 'Linux' or platform_machine != 'i686'",
    "faster-hexbytes==1.3.6",
    "hypothesis==6.27.3",
    "prompt-toolkit==3.0.52",
	"py-solc-ast==1.2.10",
	"py-solc-x==2.0.5",
    "vvm==0.3.2; platform_system == 'Linux'",
    "vyper==0.4.3; platform_system == 'Linux'",
    "websockets==15.0.1",
    "web3==7.15.0; platform_system == 'MacOS' or platform_system == 'Linux'",
]

# Brownie configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
  | venv
)/
'''
